post lookup api implementation
